syntax = "proto3";

package auth;

service Auth {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc Validate(TokenRequest) returns (TokenResponse);
  rpc Invalidate(TokenRequest) returns (TokenResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool status = 1;
  string token = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool status = 1;
}